--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ datadog==0.44.0
 fastapi==0.75.0
 frozenlist==1.3.0
 geoip2==4.5.0
-git+https://github.com/ppy-sb/ppysb-pp-py
+git+https://github.com/kita-pp/rosu-pp-py
 greenlet==1.1.2
 h11==0.13.0
 idna==3.3
