--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@
 aiohttp==3.8.5; python_version >= '3.6'
 aiomysql==0.2.0
 aiosignal==1.3.1; python_version >= '3.7'
-akatsuki-pp-py==0.9.5; python_version >= '3.7'
 annotated-types==0.5.0; python_version >= '3.7'
 anyio==3.7.1; python_version >= '3.7'
 async-timeout==4.0.3; python_version >= '3.7'
@@ -42,3 +41,4 @@ urllib3==2.0.4; python_version >= '3.7'
 uvicorn==0.23.2; python_version >= '3.8'
 uvloop==0.17.0; python_version >= '3.7'
 yarl==1.9.2; python_version >= '3.7'
+git+https://github.com/ppy-sb/rosu-pp-py
