secret auth for frontend

--- a/manual.env.example
+++ b/manual.env.example
@@ -68,3 +68,7 @@ SSL_KEY_PATH=/home/cmyui/certs/private.key
 ##          read through what it enables.
 ##          you could put your server at risk.
 DEVELOPER_MODE=False
+
+# secrets settings
+TRUSTED_SECRET = ""
+LOCAL_ONLY = True
