--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,7 @@ LOG_WITH_COLORS=False
 ##          read through what it enables.
 ##          you could put your server at risk.
 DEVELOPER_MODE=False
+
+# secrets settings
+TRUSTED_SECRET = ""
+LOCAL_ONLY = True
