--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ winloop = { platform = "win32", version = "0.1.1" }
 py3rijndael = "0.3.3"
 pytimeparse = "1.1.8"
 pydantic = "2.6.1"
-redis = { extras = ["hiredis"], version = "5.0.1" }
+redis = "4.5.1"
 sqlalchemy = ">=1.4.42,<1.5"
 akatsuki-pp-py = "1.0.0"
 cryptography = "42.0.2"
@@ -74,6 +74,8 @@ tzdata = "2024.1"
 coverage = "^7.4.1"
 databases = {version = "^0.8.0", extras = ["mysql"]}
 python-json-logger = "^2.0.7"
+rosu-pp-py = {git = "https://github.com/ppy-sb/rosu-pp-py"}
+circleguard = "^5.4.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.1"
