--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ winloop = { platform = "win32", version = "0.1.1" }
 py3rijndael = "0.3.3"
 pytimeparse = "1.1.8"
 pydantic = "2.6.1"
-redis = "4.5.1"
+redis = { extras = ["hiredis"], version = "5.0.1" }
 sqlalchemy = ">=1.4.42,<1.5"
 cryptography = "42.0.2"
 tenacity = "8.2.3"
@@ -77,8 +77,9 @@ tzdata = "2024.1"
 coverage = "^7.4.1"
 databases = { version = "^0.8.0", extras = ["mysql"] }
 python-json-logger = "^2.0.7"
-rosu-pp-py = {git = "https://github.com/ppy-sb/rosu-pp-py"}
+rosu-pp-py = { git = "https://github.com/ppy-sb/rosu-pp-py" }
 circleguard = "^5.4.1"
+poetry = "1.8.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.1"
